# mlx-vis

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
mlx_vis/: __init__.py  _knn.py  _normalize.py  localmap.py  mmae.py  nndescent.py  pacmap.py  pca.py  plot.py  render.py  tsne.py  umap.py
mlx_vis/_cne/: cne.py
mlx_vis/_dreams/: __init__.py  dreams.py
mlx_vis/_mmae/: __init__.py  mmae.py
mlx_vis/_nndescent/: nndescent.py
mlx_vis/_pacmap/: __init__.py  pacmap.py
mlx_vis/_trimap/: __init__.py  trimap.py
mlx_vis/_tsne/: tsne.py
mlx_vis/_umap/: umap.py
mlx_vis/examples/: fashion_mnist.py
tests/: test_localmap.py
