[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-vis"
version = "0.1.0"
description = "Pure MLX implementations of UMAP, t-SNE, PaCMAP, TriMap, and NNDescent for Apple Silicon. Metal GPU acceleration for both computation and video rendering. No scipy, no sklearn, no matplotlib."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Han Xiao", email = "han.xiao@jina.ai" }]
keywords = [
    "mlx",
    "apple-silicon",
    "umap",
    "tsne",
    "pacmap",
    "nndescent",
    "dimensionality-reduction",
    "visualization",
    "metal",
    "gpu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",

    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.20.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/hanxiao/mlx-vis"
Repository = "https://github.com/hanxiao/mlx-vis"
Issues = "https://github.com/hanxiao/mlx-vis/issues"

[tool.setuptools.packages.find]
include = ["mlx_vis*"]
