[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-vis"
version = "0.6.0"
description = "Pure MLX implementations of UMAP, t-SNE, PaCMAP, LocalMAP, TriMap, DREAMS, CNE, MMAE, and NNDescent for Apple Silicon. Metal GPU acceleration for both computation and video rendering. No scipy, no sklearn, no matplotlib."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Han Xiao", email = "han.xiao@jina.ai" }]
keywords = [
    "mlx",
    "apple-silicon",
    "umap",
    "tsne",
    "pacmap",
    "trimap",
    "dreams",
    "cne",
    "mmae",
    "autoencoder",
    "nndescent",
    "dimensionality-reduction",
    "visualization",
    "metal",
    "gpu",
    "embedding",
    "manifold-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",

    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.10.8",
    "mlx>=0.20.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://arxiv.org/abs/2603.04035"
Repository = "https://github.com/hanxiao/mlx-vis"
Issues = "https://github.com/hanxiao/mlx-vis/issues"

[tool.setuptools.packages.find]
include = ["mlx_vis*"]

[dependency-groups]
dev = []
